<resources>
    <string name="generator_name">Tag Generator</string>

    <!-- Views -->
    <string name="generator_input_hint">Tag value</string>
    <string name="tag_added_message">Tag added successfully</string>
    <string name="generator_title">Buddy Tag Generator</string>
    <string name="generator_subtitle">Create a new Buddy Tag from an input value or generate a new one and choose to add to the database automatically.</string>
    <string name="generated_tag_value_hint">Generated Tag value</string>
    <string name="generated_encrypted_value_hint">Generated encrypted value</string>
    <string name="generate_tag_button">Generate Tag</string>
    <string name="add_to_db_button">Add To DB</string>
    <string name="copied_to_clipboard_message">Copied to clipboard!</string>
    <string name="login_fail_message">Fail to login</string>
    <string name="share_qr_message">Share QR code to…</string>
</resources>