<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GeneratorActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/generator_title"
        style="@style/Headline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_large"
        android:gravity="start"
        android:text="@string/generator_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/generator_subtitle"
        style="@style/Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/generator_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:gravity="start"
        android:text="@string/generator_subtitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/generator_subtitle"
        app:layout_constraintBottom_toTopOf="@id/qr_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/generate_new_tag_value_button"
        android:layout_marginStart="@dimen/margin_large"
        android:textAppearance="@style/Body1"
        android:hint="@string/generator_input_hint"
        android:textColorHint="@color/generator_input_color"
        app:hintTextColor="@color/generator_input_color"
        app:boxStrokeColor="@color/generator_input_color"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/tag_value_size">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/generate_new_tag_value_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/input_layout"
        app:layout_constraintBottom_toBottomOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_sync"
        tools:tint="@color/colorSecondary"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/sync_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        app:layout_constraintStart_toStartOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="@id/input_layout"
        android:indeterminate="true"
        android:indeterminateTint="?colorSecondary"
        android:visibility="gone"
        tools:visibility="visible"
        tools:indeterminateTint="@color/colorSecondary"/>

    <ImageView
        android:id="@+id/qr_result"
        android:layout_width="@dimen/generated_qr_size"
        android:layout_height="@dimen/generated_qr_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/qr_background_frame"
        android:src="@drawable/ic_baseline_qr_code_2"/>

    <ImageView
        android:id="@+id/share_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/qr_result"
        app:layout_constraintBottom_toBottomOf="@id/qr_result"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_large"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        tools:tint="@color/colorSecondary"
        android:src="@drawable/ic_baseline_share"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/qr_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/qr_result"
        app:layout_constraintBottom_toBottomOf="@id/qr_result"
        app:layout_constraintStart_toStartOf="@id/qr_result"
        app:layout_constraintEnd_toEndOf="@id/qr_result"
        android:indeterminate="true"
        android:indeterminateTint="?colorSecondary"
        android:visibility="gone"
        tools:visibility="visible"
        tools:indeterminateTint="@color/colorSecondary"/>

    <ImageView
        android:id="@+id/new_tag_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_result"
        android:layout_marginTop="@dimen/margin_medium"
        android:padding="@dimen/margin_large"
        android:src="@drawable/ic_baseline_qr_code_2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_tag_number"
        style="@style/Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/new_tag_icon"
        app:layout_constraintBottom_toBottomOf="@id/new_tag_icon"
        app:layout_constraintStart_toEndOf="@id/new_tag_icon"
        app:layout_constraintEnd_toStartOf="@id/new_tag_copy_button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_goneMarginEnd="@dimen/margin_medium"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/generated_tag_value_hint"
        tools:text="JGK653756735DFBK"/>

    <ImageView
        android:id="@+id/new_tag_copy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/new_tag_icon"
        app:layout_constraintBottom_toBottomOf="@id/new_tag_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_large"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_content_copy"
        tools:tint="@color/colorSecondary"/>

    <ImageView
        android:id="@+id/new_tag_crypt_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_tag_icon"
        android:padding="@dimen/margin_large"
        android:src="@drawable/ic_baseline_lock" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_tag_crypt_number"
        style="@style/Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/new_tag_crypt_icon"
        app:layout_constraintBottom_toBottomOf="@id/new_tag_crypt_icon"
        app:layout_constraintStart_toEndOf="@id/new_tag_crypt_icon"
        app:layout_constraintEnd_toStartOf="@id/new_tag_crypt_copy_button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_goneMarginEnd="@dimen/margin_medium"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/generated_encrypted_value_hint"
        tools:text="-97|-110|-19|-108|61|34|-38|87|12|92|77|38|-2|104|-71|-35|92|69|60|39|-3|11|75|-83|-72|107|-27|71|-87|105|-2|-63"/>

    <ImageView
        android:id="@+id/new_tag_crypt_copy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/new_tag_crypt_icon"
        app:layout_constraintBottom_toBottomOf="@id/new_tag_crypt_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_large"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?colorSecondary"
        android:src="@drawable/ic_baseline_content_copy"
        tools:tint="@color/colorSecondary"/>

    <Button
        android:id="@+id/generate_button"
        style="@style/Button.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/generate_tag_button"/>

    <Button
        android:id="@+id/add_to_db_button"
        style="@style/Button.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/generate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:enabled="false"
        android:text="@string/add_to_db_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>